Minor documentation updates
git-svn-id: http://tircd.googlecode.com/svn/trunk@20 4ab6f0a6-dacb-11dd-a297-4fb579711a53

--- a/tircd.pod
+++ b/tircd.pod
@@ -28,7 +28,14 @@ C<cpan -i POE POE::Filter::IRCD Net::Twitter>
 
 C<./tircd.pl [/path/to/tircd.cfg]>
 
-When started, tircd will look for a configuration file named tircd.cfg (in the same directory as the program) or ~/.tircd. A sample configuration file is included with the program.
+When started, tircd will look for a configuration file in the following places:
+
+F<tircd.cfg> (in the current directory)
+
+F<~/.tircd>
+
+F</etc/tircd.cfg>
+
 You can specify an alternate path to the configuration file on the commandline if you want to keep the configuration in another location.
 
 =item Connecting
