Updated to version 0.7
Important:
	Net::Twitter 2.10 or higher is now REQUIRED, as it provides support for the search API.
	In most environments you can upgrade using the following command
		$ cpan -i Net::Twitter;

New:
	Per-user configuration options are now available.  tircd.cfg is still used for the default settings. Once you are connected to tircd you can use the /stats command to change the available config options.
	Note to protocol junkies: While /stats isn't really the right command for setting options, the RFC does say "The implementation of this command is highly dependent on the server which replies". I'm taking that in a liberal sense to make this work :)  If someone has a suggestion of an existing irc command that would be better suited for configuring options, please let me know.
	
	Multiple channels are now supported. You can /join <any channel> and then /invite your friends too it to create groups of people in different channels.  #twitter will always contain all you friends.
	
	Search is now supported.  To have results for a search term show up, do the following:
		/join a new channel. (/join #search)
		Set the topic of that channel to what you want to search. (/topic #tircd or /topic from:tircd for example)
	Your topic can be any valid twitter search query (see http://search.twitter.com/operators for examples) EXCLUDING the near: option.  The twitter search api does not allow the use of the near option.

	New config options:
		storage_path - This is a server side setting.  This should be set to a directory tircd can store configuration infomration in. tircd will use this directory to store per-user configuration, and channel information.
		timeline_count - Controls how many timeline updates to ask twitter for each time we hit the API.
	See the example tircd.cfg file for more information.

Fixed:
	Users you aren't following join #twitter via @replies and you can't kick them.
	Hopefully less crashing when the twitter API goes haywire.
	/me (ACTION) 

--- a/tircd.pod
+++ b/tircd.pod
@@ -92,6 +92,14 @@ There is currently no way to get a list of users you've currently blocked via th
 
 To unblock a user /unban them.
 
+=item Multiple Channels / Groups
+
+If you want to create a channel with just a subset of the people you follow, you can /join <any channel> and then /invite them to the channel.  tircd will send a user's updates to #twitter and any other channels you have invited a user to.
+
+=item Search
+
+If you want to have updated search results for a specific term delivered, you can /join <any channel> then set the /topic for the channnel to your search query.  Results that match that query will be sent to that channel. The /topic can be almost anything supported by the twitter search (see http://search.twitter.com/operators for exmaples).  Using the 'near' option is not currently supported.
+
 =back
 
 =head1 AUTHOR
